# jackal-parallel

./: .gitmodules  CMakeLists.txt  README.md
meta/doxy/: CMakeLists.txt  Doxyfile.in
src/jkparallel/: CMakeLists.txt  async.h  blocking_queue.h  conditions.cpp  conditions.h  dependent.cpp  dependent.h  fix_queue.h  mpsc_queue.h  parallel_allocator.cpp  parallel_allocator.h  parallel_cache_allocator.cpp  parallel_cache_allocator.h  queue.h  queues.h  sinks.h  sources.h  spinlock.cpp  spinlock.h  spmc_queue.h  task_graph.cpp  task_graph.h  task_processor.h  task_system.cpp  task_system.h  thread.cpp  thread.h
test/jkparallel_tests/: CMakeLists.txt  main.cpp
